# healthlog

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  config.example.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  analysis.py  appconfig.py  audit.py  backfill.py  body_battery_backfill.py  cli.py  cli_support.py  config.py  database.py  deps.py  diagnostics.py  ingest.py  logging_config.py  main.py  metrics.py  models.py  narrate.py  notify.py  proxies.py  rederive.py  registry.py  scheduler.py  schemas.py  stress_backfill.py  timeutil.py  units.py  workout_types.py
backend/app/analysis/: __init__.py  __main__.py  body_battery.py  constants.py  findings.py  load.py  pure.py  refresh.py  run.py  stress.py
backend/app/narrate/: __init__.py  cli.py  client.py  context.py  loader.py  prompts.py
backend/app/routers/: __init__.py  health.py  ingest.py  metrics.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_findings.py  0003_curate_metrics.py  0004_workout_hr_samples.py  0005_daily_metrics_coalesce.py  (+18 more)
backend/tests/: conftest.py  test_analysis.py  test_appconfig.py  test_audit.py  test_backfill.py  test_cli.py  test_diagnostics.py  test_idempotency.py  test_ingest_endpoint.py  test_ingest_parser.py  test_narrate.py  test_notify.py  test_rederive.py  test_registry.py  test_scheduler.py  test_store_batching.py  test_timeutil.py  test_trimp_sql.py  test_trusted_proxies.py  test_units.py  test_workout_types.py
(+33 files in other folders)
